--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,19 +1,24 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Exo+2');
+﻿@import 'material-colors/dist/colors.scss';
+@import url('https://fonts.googleapis.com/css?family=Exo+2');
+
 $font-primary: 'Exo 2';
 $page-width: 960px;
 
-$bg-body: #505050;
-$bg-main: #404040;
-$bg-header: #808080;
-$bg-nav: #606060;
-$bg-active: #303030;
+$bg-body: $md-blue-grey-900;
+$bg-main: $md-blue-grey-800;
+
+$bg-header: $md-blue-grey-800;
+$bg-nav: $md-blue-grey-600;
+$bg-nav-active: #e8e8e8;//$md-purple-a100;
+$bg-nav-selected: $md-blue-grey-900;
+
 
 $color-primary: #ccc;
 $color-primary__active: #fff;
 $color-secondary: #9ce;
 $text-color: $color_primary;
-$color-route: #fc6;
-$color-route__disabled: #a0a0a0;
+$color-route: $md-light-text-secondary;
+$color-accent: $md-green-a200;
 
 $min-width: 400px;
 
