added 'about' page; added api service

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,13 +12,13 @@ $bg-nav: $md-blue-grey-700;
 $bg-nav-active: #e8e8e8;//$md-purple-a100;
 $bg-nav-selected: $md-blue-grey-900;
 
-
 $color-primary: #ccc;
 $color-primary__active: #fff;
 $color-secondary: #9ce;
 $text-color: $color_primary;
 $color-route: $md-light-text-secondary;
 $color-accent: $md-green-a200;
+$color-accent-2: #c93; //$md-amber-600;
 
 $min-width: 400px;
 
