--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,6 +11,31 @@ body {
   overflow-y: scroll;
 }
 
+h2 {
+  font: 1.5rem $font-primary;
+  color: $color-secondary;
+  letter-spacing: 1px;
+  padding: 0 0 16px 0;
+}
+
+h3 {
+  font: 1.25rem $font-primary;
+  color: $color-primary__active;
+  letter-spacing: 1px;
+  padding: 0 0 8px 0;
+}
+
+p {
+  line-height: 24px;
+}
+
+.section {
+  background: $bg-body;
+  border-radius: .5rem;
+  margin: 0 0 .5rem 0;
+  padding: 1rem 1rem;
+}
+
 a {
   color: inherit;
   text-decoration: none;
