--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,18 +31,17 @@ p {
   line-height: 24px;
 }
 
-.section {
-  @include drop-shadow;
-  background: $bg-body;
-  border: 2px solid $md-blue-grey-600;
-  border-radius: .5rem;
-  margin: 0 0 .5rem 0;
-  padding: 1rem 1rem;
-}
-
 a {
   color: inherit;
   text-decoration: none;
+}
+
+hr {
+  background: $md-blue-grey-600;
+  border: none;
+  outline: none;
+  height: 1px;
+
 }
 
 .noselect {
@@ -62,6 +61,34 @@ a {
   display: none!important;
 }
 
+.section {
+  @include drop-shadow;
+  background: $bg-body;
+  border: 2px solid $md-blue-grey-600;
+  border-radius: .5rem;
+  margin: 0 0 .5rem 0;
+  padding: 1rem 1rem;
+}
+
+.buttons {
+  @include center-center;
+  padding: 1rem 0;
+
+  .btn {
+    margin: 0 .5rem;
+  }
+}
+
+.back-to-home {
+  font-size: 1rem;
+  color: $color-primary;
+
+  &:hover {
+    color: lighten($color-primary, 8%);
+  }
+}
+
+/*
 .button {
   font: 1rem $font-primary;
   color: #eee;
@@ -91,3 +118,4 @@ a {
     background: rgba(0, 0, 0, 0.5);
   }
 }
+*/
